# AnalystOS

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  analyst.py  base.py  clarifier.py  critic.py  executor.py  intent_classifier.py  planner.py  schema_scout.py  sql_builder.py  validator.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  chat.py  eval.py  health.py  traces.py
backend/app/db/: connection.py  seed.py
backend/app/eval/: __init__.py  metrics.py  reporter.py  runner.py
backend/app/graph/: __init__.py  nodes.py  state.py  workflow.py
backend/app/guardrails/: __init__.py  analytical_safety.py  sql_safety.py
backend/app/mcp/: __init__.py
backend/app/mcp/analytics_db/: __init__.py  server.py
backend/app/mcp/docs_dictionary/: __init__.py  server.py
backend/app/mcp/eval_server/: __init__.py  server.py
backend/app/schemas/: __init__.py  answer.py  chart_spec.py  critique.py  intent.py  plan.py  schema_pack.py  sql_candidate.py  validation_report.py
backend/app/skills/: loader.py
backend/app/skills/ambiguity_handling/: SKILL.md
backend/app/skills/chart_selection/: SKILL.md
backend/app/skills/executive_summary/: SKILL.md
backend/app/skills/metric_definitions/: SKILL.md
backend/app/tracing/: __init__.py  store.py  tracer.py
backend/data/benchmarks/: benchmark_v1.yaml
backend/data/docs/: business_glossary.md  join_guide.md
backend/data/ecommerce/: data_dictionary.yaml
(+24 files in other folders)
