[project]
name = "analystos-backend"
version = "0.1.0"
description = "AnalystOS — Agentic Analytics Copilot Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "litellm>=1.55.0",
    "langgraph>=0.2.0",
    "duckdb>=1.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlglot>=26.0.0",
    "mcp>=1.2.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.2.0",
    "faker>=33.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "groq>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
